check current directory

--- a/.pipelines/cni/cilium/cilium-cni-load-test.yaml
+++ b/.pipelines/cni/cilium/cilium-cni-load-test.yaml
@@ -15,6 +15,7 @@ stages:
               addSpnToEnvironment: true
               inlineScript: |
                 set -ex
+                make -C ./hack/swift config-dir
                 make -C ./hack/swift azcfg AZCLI=az REGION=$(LOCATION)
                 make -C ./hack/swift overlay-byocni-up AZCLI=az REGION=$(LOCATION) SUB=$(SUBSCRIPTION_ID) CLUSTER=${RESOURCE_GROUP} NODE_COUNT=10 VM_SIZE=Standard_DS4_v2
             name: "CreateAksCluster"
