test with repo root dir

--- a/hack/swift/Makefile
+++ b/hack/swift/Makefile
@@ -5,8 +5,9 @@ KUBECFG = $(HOME)/.kube
 SSH     = $(HOME)/.ssh
 AZCFG   = $(HOME)/.azure
 AZIMG   = mcr.microsoft.com/azure-cli
-CONFIG_DIR       =       $(shell pwd)
-AZCLI   ?= docker run --rm -v $(AZCFG):/root/.azure -v $(KUBECFG):/root/.kube -v $(SSH):/root/.ssh -v $(CONFIG_DIR):/tmpsrc $(AZIMG) az
+REPO_ROOT  = $(shell git rev-parse --show-toplevel)
+CONFIG  = $(REPO_ROOT)/hack/swift
+AZCLI   ?= docker run --rm -v $(AZCFG):/root/.azure -v $(KUBECFG):/root/.kube -v $(SSH):/root/.ssh -v $(CONFIG):/tmpsrc $(AZIMG) az
 
 # overrideable defaults
 REGION     ?= westus2
@@ -49,7 +50,7 @@ shell: ## print $AZCLI so it can be used outside of make
 	@echo $(AZCLI)
 
 config-dir: ## print kube-proxy config directory
-	@echo $(CONFIG_DIR)
+	@echo $(CONFIG)
 
 vars: ## Show the input vars configured for the cluster commands
 	@echo CLUSTER=$(CLUSTER)
