change e2e steps to remove kube proxy

--- a/.pipelines/cni/cilium/cilium-cni-load-test.yaml
+++ b/.pipelines/cni/cilium/cilium-cni-load-test.yaml
@@ -15,9 +15,10 @@ stages:
               addSpnToEnvironment: true
               inlineScript: |
                 set -ex
-                make -C ./hack/swift config-dir
                 make -C ./hack/swift azcfg AZCLI=az REGION=$(LOCATION)
                 make -C ./hack/swift overlay-byocni-up AZCLI=az REGION=$(LOCATION) SUB=$(SUBSCRIPTION_ID) CLUSTER=${RESOURCE_GROUP} NODE_COUNT=10 VM_SIZE=Standard_DS4_v2
+                echo "Update cluster and remove kube-proxy"
+                az aks update -n CLUSTER=${{ parameters.clusterName }}-$(make revision) -g CLUSTER=${RESOURCE_GROUP} --kube-proxy-config ./hack/swift/kube-proxy.json
             name: "CreateAksCluster"
             displayName: "Create AKS Cluster"
   - stage: install_cilium
