--- a/hack/swift/Makefile
+++ b/hack/swift/Makefile
@@ -5,9 +5,7 @@ KUBECFG = $(HOME)/.kube
 SSH     = $(HOME)/.ssh
 AZCFG   = $(HOME)/.azure
 AZIMG   = mcr.microsoft.com/azure-cli
-REPO_ROOT  = $(shell git rev-parse --show-toplevel)
-CONFIG  = $(Build.SourcesDirectory)/hack/swift/kube-proxy.json
-AZCLI   ?= docker run --rm -v $(AZCFG):/root/.azure -v $(KUBECFG):/root/.kube -v $(SSH):/root/.ssh -v $(CONFIG):/tmpsrc $(AZIMG) az
+AZCLI   ?= docker run --rm -v $(AZCFG):/root/.azure -v $(KUBECFG):/root/.kube -v $(SSH):/root/.ssh $(AZIMG) az
 
 # overrideable defaults
 REGION     ?= westus2
@@ -98,7 +96,6 @@ overlay-byocni-up: rg-up overlay-net-up ## Brings up an Overlay BYO CNI cluster
 		--pod-cidr 192.168.0.0/16 \
 		--vnet-subnet-id /subscriptions/$(SUB)/resourceGroups/$(GROUP)/providers/Microsoft.Network/virtualNetworks/$(VNET)/subnets/nodenet \
 		--no-ssh-key \
-		--kube-proxy-config /tmpsrc/kube-proxy.json \
 		--yes \
 		--verbose
 	@$(MAKE) set-kubeconf
@@ -140,7 +137,6 @@ swift-byocni-up: rg-up swift-net-up ## Bring up a SWIFT BYO CNI cluster
 		--pod-subnet-id /subscriptions/$(SUB)/resourceGroups/$(GROUP)/providers/Microsoft.Network/virtualNetworks/$(VNET)/subnets/podnet \
 		--no-ssh-key \
 		--os-sku $(OS_SKU) \
-		--kube-proxy-config /tmpsrc/kube-proxy.json \
 		--yes \
 		--verbose
 	@$(MAKE) set-kubeconf
@@ -178,7 +174,3 @@ down: ## Delete the cluster
 
 restart-vmss: ## Restarts the nodes in the cluster
 	$(AZCLI) vmss restart -g MC_${GROUP}_${CLUSTER}_${REGION} --name $(VMSS_NAME)
-
-
-disable-kube-proxy: ## Disable kube-proxy from an existing cluster
-	$(AZCLI) aks update -g $(GROUP) -n $(CLUSTER) --kube-proxy-config /tmpsrc/kube-proxy.json 
