--- a/.pipelines/singletenancy/cilium/cilium-e2e-step-template.yaml
+++ b/.pipelines/singletenancy/cilium/cilium-e2e-step-template.yaml
@@ -34,6 +34,8 @@ steps:
         make -C ./hack/swift config-dir
         make -C ./hack/swift azcfg AZCLI=az REGION=$(REGION_AKS_CLUSTER_TEST)
         make -C ./hack/swift byocni-up AZCLI=az REGION=$(REGION_AKS_CLUSTER_TEST) SUB=$(SUB_AZURE_NETWORK_AGENT_TEST) CLUSTER=${{ parameters.clusterName }}-$(make revision)
+        echo "Update cluster and remove kube-proxy"
+        az aks update -n CLUSTER=${{ parameters.clusterName }}-$(make revision) -g CLUSTER=${{ parameters.clusterName }}-$(make revision) --kube-proxy-config ./hack/swift/kube-proxy.json
         echo "Cluster successfully created"
     displayName: Create test cluster
     condition: succeeded()
