--- a/.pipelines/singletenancy/overlay/overlay-e2e-step-template.yaml
+++ b/.pipelines/singletenancy/overlay/overlay-e2e-step-template.yaml
@@ -34,7 +34,7 @@ steps:
         make -C ./hack/swift azcfg AZCLI=az REGION=$(REGION_OVERLAY_CLUSTER_TEST)
         make -C ./hack/swift overlay-byocni-up AZCLI=az REGION=$(REGION_OVERLAY_CLUSTER_TEST) SUB=$(SUB_AZURE_NETWORK_AGENT_TEST) CLUSTER=${{ parameters.clusterName }}-$(make revision)
         echo "Update cluster and remove kube-proxy"
-        az aks update -n CLUSTER=${{ parameters.clusterName }}-$(make revision) -g CLUSTER=${{ parameters.clusterName }}-$(make revision) --kube-proxy-config ./hack/swift/kube-proxy.json
+        az aks update -n ${{ parameters.clusterName }}-$(make revision) -g ${{ parameters.clusterName }}-$(make revision) --kube-proxy-config ./hack/swift/kube-proxy.json
         echo "Cluster successfully created"
     displayName: Create Overlay cluster
     condition: succeeded()
