fix kubectl cmd in load test

--- a/.pipelines/cni/cilium/cilium-cni-load-test.yaml
+++ b/.pipelines/cni/cilium/cilium-cni-load-test.yaml
@@ -154,7 +154,7 @@ stages:
             name: "GetCluster"
             displayName: "Get AKS Cluster"
           - script: |
-              k delete deployment container -n default
+              kubectl delete deployment container -n default
               cilium connectivity test
             retryCountOnTaskFailure: 6
             name: "CiliumConnectivityTests"
