swift configmap update

--- a/test/integration/manifests/cnsconfig/swiftconfigmap.yaml
+++ b/test/integration/manifests/cnsconfig/swiftconfigmap.yaml
@@ -24,5 +24,8 @@ data:
       "ChannelMode": "CRD",
       "InitializeFromCNI": true,
       "ManageEndpointState": false,
-      "ProgramSNATIPTables" : false
+      "ProgramSNATIPTables" : false,
+      "EnableAsyncPodDelete": true,
+      "WatcherPath": "/var/run/azure-vnet",
+      "Delete-Directory": "/deleteIDs"
     }
