fix configmap for test

--- a/test/integration/manifests/cnsconfig/swiftconfigmap.yaml
+++ b/test/integration/manifests/cnsconfig/swiftconfigmap.yaml
@@ -27,5 +27,5 @@ data:
       "ProgramSNATIPTables" : false,
       "EnableAsyncPodDelete": true,
       "WatcherPath": "/var/run/azure-vnet",
-      "Delete-Directory": "/deleteIDs"
+      "DeleteDirectory": "/deleteIDs"
     }
