use k8s 1.13 for cilium test

--- a/hack/aks/Makefile
+++ b/hack/aks/Makefile
@@ -117,6 +117,7 @@ overlay-byocni-nokubeproxy-up: rg-up overlay-net-up ## Brings up an Overlay BYO 
 		--vnet-subnet-id /subscriptions/$(SUB)/resourceGroups/$(GROUP)/providers/Microsoft.Network/virtualNetworks/$(VNET)/subnets/nodenet \
 		--no-ssh-key \
 		--kube-proxy-config ./kube-proxy.json \
+		--kubernetes-version 1.28.0 \
 		--yes
 	@$(MAKE) set-kubeconf
 
