--- a/.pipelines/singletenancy/cilium-dualstack-overlay/cilium-dualstackoverlay-e2e-step-template.yaml
+++ b/.pipelines/singletenancy/cilium-dualstack-overlay/cilium-dualstackoverlay-e2e-step-template.yaml
@@ -33,16 +33,18 @@ steps:
         kubectl cluster-info
         kubectl get po -owide -A
         echo "deploy Cilium ConfigMap"
-        kubectl apply -f test/integration/manifests/cilium/v${CILIUM_TEMPLATE_DIR}/cilium-config/cilium-config-dualstack.yaml
+        kubectl apply -f test/integration/manifests/cilium/v${CILIUM_VERSION_TAG%.*}/cilium-config/cilium-config-dualstack.yaml
         echo "install Cilium ${CILIUM_DUALSTACK_VERSION}"
+        export DIR=${CILIUM_DUALSTACK_VERSION%.*}
+        echo "installing files from ${DIR}"
         # Passes Cilium image to daemonset and deployment
-        kubectl apply -f test/integration/manifests/cilium/v${CILIUM_TEMPLATE_DIR}/cilium-agent/files
-        kubectl apply -f test/integration/manifests/cilium/v${CILIUM_TEMPLATE_DIR}/cilium-operator/files
+        kubectl apply -f test/integration/manifests/cilium/v${CILIUM_VERSION_TAG%.*}/cilium-agent/files
+        kubectl apply -f test/integration/manifests/cilium/v${CILIUM_VERSION_TAG%.*}/cilium-operator/files
                   
         export CILIUM_VERSION_TAG=${CILIUM_DUALSTACK_VERSION}
         echo "install Cilium ${CILIUM_DUALSTACK_VERSION} onto Overlay Cluster"
-        envsubst '${CILIUM_VERSION_TAG},${CILIUM_IMAGE_REGISTRY}' < test/integration/manifests/cilium/v${CILIUM_TEMPLATE_DIR}/cilium-agent/templates/daemonset.tpl | kubectl apply -f -
-        envsubst '${CILIUM_VERSION_TAG},${CILIUM_IMAGE_REGISTRY}' < test/integration/manifests/cilium/v${CILIUM_TEMPLATE_DIR}/cilium-operator/templates/deployment.tpl | kubectl apply -f -
+        envsubst '${CILIUM_VERSION_TAG},${CILIUM_IMAGE_REGISTRY}' < test/integration/manifests/cilium/v${CILIUM_VERSION_TAG%.*}/cilium-agent/templates/daemonset.tpl | kubectl apply -f -
+        envsubst '${CILIUM_VERSION_TAG},${CILIUM_IMAGE_REGISTRY}' < test/integration/manifests/cilium/v${CILIUM_VERSION_TAG%.*}/cilium-operator/templates/deployment.tpl | kubectl apply -f -
         kubectl get po -owide -A
     name: "installCilium"
     displayName: "Install Cilium on AKS Dualstack Overlay"
