fix resources in clusterrole

--- a/test/integration/manifests/cilium/v1.13/cilium-agent/files/clusterrole.yaml
+++ b/test/integration/manifests/cilium/v1.13/cilium-agent/files/clusterrole.yaml
@@ -45,8 +45,8 @@ rules:
 - apiGroups:
   - cilium.io
   resources:
-  - ciliumnodeconfigs.cilium.io
-  - ciliumloadbalancerippools.cilium.io
+  - ciliumnodeconfigs
+  - ciliumloadbalancerippools
   - ciliumbgppeeringpolicies
   - ciliumclusterwideenvoyconfigs
   - ciliumclusterwidenetworkpolicies
