--- a/.pipelines/pipeline.yaml
+++ b/.pipelines/pipeline.yaml
@@ -249,6 +249,10 @@ stages:
                 name: cns
                 os: windows
                 os_version: ltsc2022
+              ipv6_hp_bpf_linux_amd64:
+                arch: amd64
+                name: ipv6-hp-bpf
+                os: linux
               npm_linux_amd64:
                 arch: amd64
                 name: npm
@@ -288,6 +292,10 @@ stages:
               cns_linux_arm64:
                 arch: arm64
                 name: cns
+                os: linux
+              ipv6_hp_bpf_linux_arm64:
+                arch: arm64
+                name: ipv6-hp-bpf
                 os: linux
               npm_linux_arm64:
                 arch: arm64
@@ -360,6 +368,10 @@ stages:
                 platforms: linux/amd64 linux/arm64 windows/amd64
               cns:
                 name: cns
+                os_versions: ltsc2019 ltsc2022
+                platforms: linux/amd64 linux/arm64 windows/amd64
+              ipv6_hp_bpf:
+                name: ipv6-hp-bpf
                 os_versions: ltsc2019 ltsc2022
                 platforms: linux/amd64 linux/arm64 windows/amd64
               npm:
