--- a/.pipelines/cni/cilium/cilium-scale-test.yaml
+++ b/.pipelines/cni/cilium/cilium-scale-test.yaml
@@ -27,12 +27,12 @@ stages:
                 kubectl apply -f test/integration/manifests/cilium/cilium-operator
                 echo "Keep CNS version up to date, grabbing pipeline parameter"
                 CNS_IMAGE=${CNS_IMAGE}
-                sed -i '/containers:/{n;n;s/\(image\).*/\1: '"${CNS_IMAGE//\//\\/}"'/}' test/integration/manifests/cns/daemonset.yaml 
-                kubectl apply -f test/integration/manifests/cns/daemonset.yaml 
+                sed -i '/containers:/{n;n;s/\(image\).*/\1: '"${CNS_IMAGE//\//\\/}"'/}' test/integration/manifests/cns/daemonset.yaml
+                kubectl apply -f test/integration/manifests/cns/daemonset.yaml
                 for val in $(az vmss list -g MC_${clusterName}_${clusterName}_$(REGION_AKS_CLUSTER_TEST) --query "[].name" -o tsv); do
                   make -C ./hack/aks restart-vmss AZCLI=az CLUSTER=${clusterName} REGION=$(REGION_AKS_CLUSTER_TEST) VMSS_NAME=${val}
                 done
-                kubectl get node 
+                kubectl get node
                 kubectl get pod -A
             name: "UpdateCiliumandCNSVersion"
             displayName: "Update Cilium and CNS Version"
@@ -72,7 +72,7 @@ stages:
               inlineScript: |
                 echo "Set node label scale-test=true and connectivity-test=true for testing"
                 az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
-                cd test/scale 
+                cd test/scale
                 chmod +x label-nodes.sh
                 ./label-nodes.sh
             name: "LabelNodes"
@@ -95,25 +95,25 @@ stages:
                 echo "collect cpu and memory usage before scaling for network policies"
                 mkdir test1_1_netpol_cpu_and_mem_before
                 cd test1_1_netpol_cpu_and_mem_before
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_before_netpol_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_before_netpol_scale.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test1_1_netpol_cpu_and_mem_before/
                 echo $ARTIFACT_DIR
-                sudo rm -rf $ARTIFACT_DIR 
+                sudo rm -rf $ARTIFACT_DIR
                 sudo mkdir $ARTIFACT_DIR
                 cd ..
                 sudo cp ./test1_1_netpol_cpu_and_mem_before/* $ARTIFACT_DIR
                 echo "scale deployment and to prep for network policies test"
                 cd test/scale
                 chmod +x test-scale.sh
-                ./test-scale.sh --max-kwok-pods-per-node=0 --num-kwok-deployments=0 --num-kwok-replicas=0 --max-real-pods-per-node=${REAL_PODS_PER_NODE_NETPOL} --num-real-deployments=${NUM_REAL_DEPLOYMENTS_NETPOL} --num-real-replicas=${NUM_REAL_REPLICAS_NETPOL} --num-network-policies=${APPLIED_NETPOL} --num-unapplied-network-policies=${UNAPPLIED_NETPOL} --num-unique-labels-per-pod=0 --num-unique-labels-per-deployment=5 --num-shared-labels-per-pod=3 --num-real-services=${NUM_REAL_SVC_NETPOL} --delete-labels
+                ./test-scale.sh --max-kwok-pods-per-node=0 --num-kwok-deployments=0 --num-kwok-replicas=0 --max-real-pods-per-node=${REAL_PODS_PER_NODE_NETPOL} --num-real-deployments=${NUM_REAL_DEPLOYMENTS_NETPOL} --num-real-replicas=${NUM_REAL_REPLICAS_NETPOL} --num-network-policies=${APPLIED_NETPOL} --num-unapplied-network-policies=${UNAPPLIED_NETPOL} --num-cilium-network-policies=${APPLIED_CILIUMNETPOL} --num-unapplied-cilium-network-policies=${UNAPPLIED_CILIUMNETPOL} --num-unique-labels-per-pod=0 --num-unique-labels-per-deployment=5 --num-shared-labels-per-pod=3 --num-real-services=${NUM_REAL_SVC_NETPOL} --delete-labels
                 echo "collect cpu and mem results after scaling"
                 mkdir test1_2_netpol_cpu_and_mem_scale
                 cd test1_2_netpol_cpu_and_mem_scale
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_netpol_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_netpol_scale.log"
@@ -163,14 +163,14 @@ stages:
                 echo "collect cpu and mem results after connectivity tests"
                 mkdir test1_3_netpol_cpu_and_mem_after
                 cd test1_3_netpol_cpu_and_mem_after
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_after_netpol_tests.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_after_netpol_tests.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test1_3_netpol_cpu_and_mem_after/
                 echo $ARTIFACT_DIR
-                sudo rm -rf $ARTIFACT_DIR 
+                sudo rm -rf $ARTIFACT_DIR
                 sudo mkdir $ARTIFACT_DIR
                 cd ..
                 sudo cp ./test1_3_netpol_cpu_and_mem_after/* $ARTIFACT_DIR
@@ -201,14 +201,14 @@ stages:
                 echo "collect cpu and mem results before scale for lb tests"
                 mkdir test2_1_lb_cpu_and_mem_before
                 cd test2_1_lb_cpu_and_mem_before
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_before_lb_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_before_lb_scale.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test2_1_lb_cpu_and_mem_before/
                 echo $ARTIFACT_DIR
-                sudo rm -rf $ARTIFACT_DIR 
+                sudo rm -rf $ARTIFACT_DIR
                 sudo mkdir $ARTIFACT_DIR
                 cd ..
                 sudo cp ./test2_1_lb_cpu_and_mem_before/* $ARTIFACT_DIR
@@ -218,7 +218,7 @@ stages:
                 echo "collect cpu and mem results after scaling"
                 mkdir test2_2_lb_cpu_and_mem_scale
                 cd test2_2_lb_cpu_and_mem_scale
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_lb_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_lb_scale.log"
@@ -274,7 +274,7 @@ stages:
                 cd ..
                 mkdir test2_3_lb_cpu_and_mem_after
                 cd test2_3_lb_cpu_and_mem_after
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_after_lb_tests.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_after_lb_tests.log"
@@ -328,7 +328,7 @@ stages:
                 echo "collect cpu and mem results after netperf tests"
                 mkdir test3_netperf_cpu_and_mem
                 cd test3_netperf_cpu_and_mem
-                echo "running k top node" 
+                echo "running k top node"
                 kubectl top node >> "node_netperf.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_netperf.log"
@@ -337,8 +337,8 @@ stages:
                 ARTIFACT_DIR2=$(Build.ArtifactStagingDirectory)/test3_netperf/
                 echo $ARTIFACT_DIR
                 echo $ARTIFACT_DIR2
-                sudo rm -rf $ARTIFACT_DIR 
-                sudo rm -rf $ARTIFACT_DIR2 
+                sudo rm -rf $ARTIFACT_DIR
+                sudo rm -rf $ARTIFACT_DIR2
                 sudo mkdir $ARTIFACT_DIR
                 sudo mkdir $ARTIFACT_DIR2
                 cd ..
