get custom pod memory/cpu

--- a/.pipelines/cni/cilium/cilium-scale-test.yaml
+++ b/.pipelines/cni/cilium/cilium-scale-test.yaml
@@ -99,6 +99,7 @@ stages:
                 kubectl top node >> "node_before_netpol_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_before_netpol_scale.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_before_netpol_scale.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test1_1_netpol_cpu_and_mem_before/
                 echo $ARTIFACT_DIR
@@ -117,6 +118,7 @@ stages:
                 kubectl top node >> "node_netpol_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_netpol_scale.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_netpol_scale.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR2=$(Build.ArtifactStagingDirectory)/test1_2_netpol_cpu_and_mem_scale/
                 echo $ARTIFACT_DIR2
@@ -167,6 +169,7 @@ stages:
                 kubectl top node >> "node_after_netpol_tests.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_after_netpol_tests.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_after_netpol_tests.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test1_3_netpol_cpu_and_mem_after/
                 echo $ARTIFACT_DIR
@@ -205,6 +208,7 @@ stages:
                 kubectl top node >> "node_before_lb_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_before_lb_scale.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_before_lb_scale.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test2_1_lb_cpu_and_mem_before/
                 echo $ARTIFACT_DIR
@@ -222,6 +226,7 @@ stages:
                 kubectl top node >> "node_lb_scale.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_lb_scale.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_lb_scale.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR2=$(Build.ArtifactStagingDirectory)/test2_2_lb_cpu_and_mem_scale/
                 echo $ARTIFACT_DIR2
@@ -278,6 +283,7 @@ stages:
                 kubectl top node >> "node_after_lb_tests.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_after_lb_tests.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_after_lb_tests.log"
                 cd ..
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR2=$(Build.ArtifactStagingDirectory)/test2_3_lb_cpu_and_mem_after/
@@ -332,6 +338,7 @@ stages:
                 kubectl top node >> "node_netperf.log"
                 echo "running k top pod"
                 kubectl top pod -A | grep cilium >> "pod_netperf.log"
+                kubectl top pod -A | grep ${CUSTOM_POD_NAME} >> "custom_pod_netperf.log"
                 echo "Logs will be available as a build artifact"
                 ARTIFACT_DIR=$(Build.ArtifactStagingDirectory)/test3_netperf_cpu_and_mem/
                 ARTIFACT_DIR2=$(Build.ArtifactStagingDirectory)/test3_netperf/
