--- a/test/scale/templates/real-nginx-deployment.yaml
+++ b/test/scale/templates/real-nginx-deployment.yaml
@@ -24,7 +24,7 @@ spec:
         scale-test: "true"
       containers:
       - name: nginx
-        image: nginx:1
+        image: docker pull mcr.microsoft.com/mirror/docker/library/nginx:1.25
         ports:
         - name: http
           containerPort: 80
