--- a/.pipelines/cni/cilium/cilium-scale-test.yaml
+++ b/.pipelines/cni/cilium/cilium-scale-test.yaml
@@ -16,7 +16,7 @@ stages:
               scriptType: "bash"
               addSpnToEnvironment: true
               inlineScript: |
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 echo "Redeploy all cilium components and update cilium version. Redeploy all to catch all changes between versions"
                 echo "deploy Cilium ConfigMap"
                 kubectl apply -f test/integration/manifests/cilium/cilium-config.yaml
@@ -29,7 +29,7 @@ stages:
                 CNS_IMAGE=${CNS_IMAGE}
                 sed -i '/containers:/{n;n;s/\(image\).*/\1: '"${CNS_IMAGE//\//\\/}"'/}' test/integration/manifests/cns/daemonset.yaml
                 kubectl apply -f test/integration/manifests/cns/daemonset.yaml
-                for val in $(az vmss list -g MC_${clusterName}_${clusterName}_$(REGION_AKS_CLUSTER_TEST) --query "[].name" -o tsv); do
+                for val in $(az vmss list -g MC_${RESOURCE_GROUP}_${clusterName}_$(REGION_AKS_CLUSTER_TEST) --query "[].name" -o tsv); do
                   make -C ./hack/aks restart-vmss AZCLI=az CLUSTER=${clusterName} REGION=$(REGION_AKS_CLUSTER_TEST) VMSS_NAME=${val}
                 done
                 kubectl get node
@@ -51,9 +51,9 @@ stages:
               addSpnToEnvironment: true
               inlineScript: |
                 set -ex
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 echo "Scaling up nodes"
-                az aks nodepool scale --name nodepool1 --cluster-name ${CLUSTER} --resource-group ${CLUSTER} --node-count ${NODE_COUNT_UP}
+                az aks nodepool scale --name nodepool1 --cluster-name ${CLUSTER} --resource-group ${RESOURCE_GROUP} --node-count ${NODE_COUNT_UP}
             name: "ScaleUp"
             displayName: "Scale up Nodes"
   - stage: label_nodes
@@ -71,7 +71,7 @@ stages:
               addSpnToEnvironment: true
               inlineScript: |
                 echo "Set node label scale-test=true and connectivity-test=true for testing"
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 cd test/scale
                 chmod +x label-nodes.sh
                 ./label-nodes.sh
@@ -92,7 +92,7 @@ stages:
               scriptType: "bash"
               addSpnToEnvironment: true
               inlineScript: |
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 echo "collect cpu and memory usage before scaling for network policies"
                 mkdir test1_1_netpol_cpu_and_mem_before
                 cd test1_1_netpol_cpu_and_mem_before
@@ -159,7 +159,7 @@ stages:
               addSpnToEnvironment: true
               inlineScript: |
                 echo "Run network policies test"
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 cd test/scale/connectivity
                 chmod +x test-connectivity.sh
                 ./test-connectivity.sh --num-scale-pods-to-verify=${NUM_SCALE_PODS_TO_VERIFY} --max-wait-for-initial-connectivity=600 --max-wait-after-adding-netpol=120
@@ -202,7 +202,7 @@ stages:
               scriptType: "bash"
               addSpnToEnvironment: true
               inlineScript: |
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 echo "collect cpu and mem results before scale for lb tests"
                 mkdir test2_1_lb_cpu_and_mem_before
                 cd test2_1_lb_cpu_and_mem_before
@@ -266,7 +266,7 @@ stages:
               scriptType: "bash"
               addSpnToEnvironment: true
               inlineScript: |
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 echo "Deploy apachebench pod and run test"
                 cd hack/manifests
                 kubectl apply -f apache.yaml
@@ -327,7 +327,7 @@ stages:
               scriptType: "bash"
               addSpnToEnvironment: true
               inlineScript: |
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 chmod +x hack/scripts/netperf.sh
                 kubectl apply -f hack/manifests/netperf-pod.yaml
                 kubectl rollout status deployment container6 --timeout=30s
@@ -384,10 +384,10 @@ stages:
               addSpnToEnvironment: true
               inlineScript: |
                 set -ex
-                az aks get-credentials --resource-group ${CLUSTER} --name ${CLUSTER}
+                az aks get-credentials --resource-group ${RESOURCE_GROUP} --name ${CLUSTER}
                 echo "Scaling to 5 nodes"
-                vmss_name=$(az vmss list -g MC_${CLUSTER}_${CLUSTER}_$(LOCATION) --query "[].name" -o tsv)
-                make -C ./hack/aks scale-vmss AZCLI=az CLUSTER=${CLUSTER} REGION=$(LOCATION) VMSS_NAME=$vmss_name NODE_COUNT=5
+                vmss_name=$(az vmss list -g MC_${RESOURCE_GROUP}_${CLUSTER}_$(LOCATION) --query "[].name" -o tsv)
+                make -C ./hack/aks scale-vmss AZCLI=az GROUP=${RESOURCE_GROUP} CLUSTER=${CLUSTER} REGION=$(LOCATION) VMSS_NAME=$vmss_name NODE_COUNT=5
                 kubectl get node
             name: "ScaleDown"
             displayName: "Scale down to 5 Nodes"
