--- a/test/integration/manifests/cilium/v1.14/cilium-config/cilium-config-dualstack.yaml
+++ b/test/integration/manifests/cilium/v1.14/cilium-config/cilium-config-dualstack.yaml
@@ -16,7 +16,7 @@ data:
   cluster-name: default
   debug: "false"
   disable-cnp-status-updates: "true"
-  disable-endpoint-crd: "false"
+  disable-endpoint-crd: "true"
   dnsproxy-enable-transparent-mode: "false"
   enable-auto-protect-node-port-range: "true"
   enable-bgp-control-plane: "false"
@@ -32,12 +32,15 @@ data:
   enable-ipv6: "true"
   enable-ipv6-masquerade: "false"
   enable-k8s-terminating-endpoint: "true"
+  enable-k8s-network-policy: "false"
+  enable-cilium-network-policy: "false"
+  enable-cilium-clusterwide-network-policy: "false"
   enable-l2-neigh-discovery: "true"
   enable-l7-proxy: "false"
   enable-local-node-route: "false"
   enable-local-redirect-policy: "false"
   enable-metrics: "true"
-  enable-policy: default
+  enable-policy: never
   enable-remote-node-identity: "true"
   enable-session-affinity: "true"
   enable-svc-source-range-check: "true"
